Use the unix native char conversion routines on BeOS. Bug #151406 r=timeless